--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -14,9 +14,9 @@
 }
 
 .App-header {
-  /* background-color: #282c34; */
-  /* min-height: 100vh; */
-  /* display: flex; */
+   background-color: #282c34; 
+   min-height: 100vh; 
+   display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -35,4 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
